# neural-net-fun

./: .gitignore  Cargo.toml  README.md  build-android.sh  build-wasm.sh  docker-compose.yml  index.html  neural-net-fun.wasm  package-lock.json  package.json
cargo-quad-apk/: Cargo.toml  Dockerfile  README.md
cargo-quad-apk/src/: config.rs
cargo-quad-apk/src/ops/: build.rs
src/: button.rs  classifier_2d.rs  context.rs  engine.rs  main.rs  perceptron.rs  plot.rs  text.rs  value.rs  zoom.rs
